# tailorpilot

./: .gitignore  LICENSE  README.md
backend/: conftest.py  pyproject.toml
backend/src/tailorpilot/: graph.py  grounder.py  main.py  model_adapter.py  parser.py  schemas.py  writer.py
backend/tests/: test_graph.py  test_grounder.py  test_health.py  test_model_adapter.py  test_parser.py  test_writer.py
dashboard/: middleware.ts  package-lock.json  package.json  supabase_cvs_table.sql  supabase_user_details_columns.sql
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/parse-cv/: route.ts
dashboard/src/app/components/: AuthForm.tsx  Reveal.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/utils/supabase/: client.ts  server.ts
extension/: global.d.ts  package-lock.json  package.json  popup.css  popup.tsx  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.verify.tsbuildinfo
extension/src/: background.ts  popup.css  popup.tsx
extension/src/contents/: job-detector.ts
extension/src/lib/: export.ts  supabase.ts  types.ts
